--- a/docs/style.css
+++ b/docs/style.css
@@ -212,6 +212,7 @@ h3 {
 }
 
 .hamburger {
+    display: none; /* Hidden by default on desktop */
     background-color: #FF385C;
     color: #FFFFFF;
     border: none;
@@ -220,7 +221,6 @@ h3 {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s;
-    margin-top: 10px;
 }
 
 .hamburger:hover {
